fix: text align

--- a/src/components/PowerWp/ListProcent/ListProcent.module.css
+++ b/src/components/PowerWp/ListProcent/ListProcent.module.css
@@ -53,7 +53,6 @@
     flex-direction: column;
     align-items: center;
 
-
     @media (width > 768px) {
         gap: 32px;
         flex-direction: row;
@@ -68,10 +67,15 @@
     color: #550fde;
 }
 .listProcent li p:last-child {
+    text-align: center;
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 20px;
     line-height: 165%;
     color: #666;
     width: 236px;
+
+    @media (width > 768px) {
+        text-align: left;
+    }
 }
